# corewar

./: CMakeLists.txt  Makefile  asm  katchup.cor  start.sh  zork.cor  zork.s
asm.dSYM/Contents/Resources/DWARF/: asm
inc/: .asm.h.swp  asm.h  op.h
libft/: Makefile  ft_atoi_base.c
src/asm/: .pars.c.swp  .valid.c.swp  asm.c  cmd.c  op.c  operation.c  opers_error.c  opers_type.c  pars.c  print.c  read_arg.c  valid.c
vm_champs/: .t.s.swp  t.cor  t.s  zork.cor  zork.s
vm_champs/champs/examples/: zork.cor  zork.s
