cmake_minimum_required(VERSION 3.14)
project(corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(inc)
include_directories(libft)

add_executable(corewar
        inc/asm.h
        inc/op.h
        libft/ft_addchr_e.c
        libft/ft_addchr_s.c
        libft/ft_addnchr_e.c
        libft/ft_addnchr_s.c
        libft/ft_atoi.c
        libft/ft_atoi_base.c
        libft/ft_bin_dec.c
        libft/ft_bzero.c
        libft/ft_chr_rep.c
        libft/ft_chrstr.c
        libft/ft_comb.c
        libft/ft_expn.c
        libft/ft_float_itoa.c
        libft/ft_hex.c
        libft/ft_hex_dec.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_latoi.c
        libft/ft_len_nbr.c
        libft/ft_lowstr.c
        libft/ft_lstadd.c
        libft/ft_lstappend.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlen.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_makemtrx.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_octal.c
        libft/ft_pow.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_rewrite.c
        libft/ft_sqrt.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strcpy_chr.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strojoin.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap.c
        libft/ft_to_char.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_unitoa.c
        libft/ft_upstr.c
        libft/get_next_line.c
        libft/libft.h
        src/asm/asm.c
        src/asm/cmd.c
        src/asm/op.c
        src/asm/operation.c
        src/asm/opers_error.c
        src/asm/opers_list.c
        src/asm/opers_type.c
        src/asm/pars.c
        src/asm/print.c
        src/asm/read_arg.c
        src/asm/valid.c)
